tests/behavior/error/int_modulo_by_zero_i32.bz
function main()
{
	let a = 1i32;
	let b = 0i32;
	let _ = a % b;
}
